force-app/main/default/objects/ServiceContactDefault__mdt/fields/CaseLanding__c.field-meta.xml
<CustomField>
    <fullName>CaseLanding__c</fullName>
    <description>This is the Lightning URL where VF page redirects to if contact is not found .</description>
    <label>Case Landing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>