force-app/main/default/objects/ServiceContactDefault__mdt/fields/ConNumberPrefix__c.field-meta.xml
<CustomField>
    <fullName>ConNumberPrefix__c</fullName>
    <description>This is the Number prefix of the Contact</description>
    <label>SF Contact Number Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>