force-app/main/default/objects/ServiceContactDefault__mdt/fields/ContactURLPrefix__c.field-meta.xml
<CustomField>
    <fullName>ContactURLPrefix__c</fullName>
    <description>This is the Lightning URL Prefix of Contact records</description>
    <label>Contact URL Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>